<resources>
    <string name="app_name">Project Android</string>
    <string name="username">USERNAME</string>
    <string name="password1">PASSWORD</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="sign_in1">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="copyright_1999_2021_team_10">Copyright © 1999-2021 TEAM 10 inc</string>
    <string name="todo">TODO</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="copyright_1999_2021_team_10_inc">Copyright © 1999-2021 TEAM 10 inc</string>
    <string name="todo5">TODO</string>
    <string name="mask">TODO</string>
    <string name="todo4">TODO</string>
    <string name="localhost">192.168.1.6</string>
</resources>