<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="449dp"
            android:layout_height="778dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/signin"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="420dp"
            android:layout_height="757dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mask"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.155"
            app:srcCompat="@drawable/dangnhap"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#CCCCCC"
            android:textColorHint="#CCCCCC"
            app:boxBackgroundColor="#CCCCCC"
            app:boxStrokeColor="#CCCCCC"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:hintTextColor="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:suffixTextColor="#CCCCCC">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00CCCCCC"
                android:hint="@string/username"
                android:textColor="#CCCCCC"
                android:textColorHint="#CCCCCC" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputemail"
            android:layout_width="230dp"
            android:layout_height="63dp"
            android:hint="@string/password"
            android:textColorHint="#CCCCCC"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.092">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="#00FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="232dp"
            android:layout_height="56dp"
            android:backgroundTint="#CCEEEEEE"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_in"
            android:textColor="#414D59"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.764" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#DDDDDD"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.786" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="#DDDDDD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <Button
            android:id="@+id/signUpHere"
            android:layout_width="92dp"
            android:layout_height="35dp"
            android:backgroundTint="#00FFFFFF"
            android:drawableTop="@drawable/textline"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="#00FFFFFF"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.755"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.862" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_1999_2021_team_10_inc"
            android:textColor="#414D59"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="68dp"
            android:layout_height="67dp"
            android:backgroundTint="#00FFFFFF"
            android:drawableTop="@drawable/iconback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

